--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -26,7 +26,7 @@ FROM nginx:1.15-alpine
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
       company=companyname \
-      project=server-template \
+      project=full-stack-template \
       role=client
 WORKDIR /service
 RUN chown -R nginx:nginx /var/cache/nginx && \
