--- a/alternatives/client-static/Dockerfile.build
+++ b/alternatives/client-static/Dockerfile.build
@@ -4,7 +4,7 @@ ARG SERVICE_DIR=.
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
       company=companyname \
-      project=server-template \
+      project=full-stack-template \
       role=client
 WORKDIR /service
 RUN chown -R nginx:nginx /var/cache/nginx && \
