--- a/scripts/helm/Chart.yaml
+++ b/scripts/helm/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
 description: A Helm chart for applications and APIs running on server.
-name: server-template
+name: full-stack-template
 version: 1.0.0
