--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -20,7 +20,7 @@ FROM node:10-alpine
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
       company=companyname \
-      project=server-template \
+      project=full-stack-template \
       role=server
 ENV BUILD_VERSION ${BUILD_VERSION}
 ENV NODE_ENV production
