fix: rename server-template -> full-stack-template

--- a/database/sqitch.conf
+++ b/database/sqitch.conf
@@ -1,9 +1,9 @@
 [core]
 	engine = pg
-[target "server_template"]
-	uri = db:pg://server_template_local_app:secret@0.0.0.0:5432/server_template_local
+[target "full_stack_template"]
+	uri = db:pg://full_stack_template_local_app:secret@0.0.0.0:5432/full_stack_template_local
 [engine "pg"]
-	target = server_template
+	target = full_stack_template
 [deploy]
 	verify = true
 [rebase]
