--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -40,7 +40,12 @@ full-stack:
       #   basicAuthEnabled:
       #   basicAuthHtpasswdSecret:
       #   clientMaxBodySize:
+      #   bufferSize:
+      #   requestBuffering:
+      #   connectTimeout:
+      #   sendTimeout:
       #   readTimeout:
+      #   nextUpstreamTimeout:
       #   limitRate:
       #   limitRateAfter:
       #   rewriteTarget:
@@ -48,8 +53,13 @@ full-stack:
     # Path defaults
     basicAuthEnabled: ${taito_basic_auth_enabled}
     basicAuthHtpasswdSecret: ${taito_project}-${taito_env}-basic-auth
-    clientMaxBodySize: 1m
-    readTimeout: 60
+    # clientMaxBodySize: 1m
+    # bufferSize: 4k
+    # requestBuffering: on
+    # connectTimeout: 5
+    # sendTimeout: 60
+    # readTimeout: 60
+    # nextUpstreamTimeout: 0
     limitRate:
     limitRateAfter:
     rewriteTarget:
