--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -87,6 +87,7 @@ services:
       - "${DC_PATH}/service/node_modules"
     environment:
       DC_COMMAND: ${DC_COMMAND}
+      HOST_UNAME: ${taito_host_uname}
       COMMON_COMPANY: companyname
       COMMON_PROJECT: full-stack-template
       COMMON_PUBLIC_PORT: 9999
@@ -163,6 +164,7 @@ services:
       # - "/service/site/node_modules"
     environment:
       DC_COMMAND: ${DC_COMMAND}
+      HOST_UNAME: ${taito_host_uname}
       COMMON_PUBLIC_PORT: 9999
 
   full-stack-template-redis:
