--- a/server/package.json
+++ b/server/package.json
@@ -12,56 +12,56 @@
     "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js"
   },
   "dependencies": {
-    "@sentry/node": "^5.4.0",
-    "boom": "^7.3.0",
-    "bunyan": "^1.8.12",
-    "koa": "^2.7.0",
-    "koa-basic-auth": "^4.0.0",
-    "koa-joi-router": "^6.0.0",
-    "koa-qs": "^2.0.0",
-    "lodash": "^4.17.11",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.25",
-    "mustache": "^3.0.1",
-    "pg-promise": "^8.7.2",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "showdown": "^1.9.0",
+    "@sentry/node": "5.6.0",
+    "boom": "7.3.0",
+    "bunyan": "1.8.12",
+    "koa": "2.7.0",
+    "koa-basic-auth": "4.0.0",
+    "koa-joi-router": "6.0.0",
+    "koa-qs": "2.0.0",
+    "lodash": "4.17.15",
+    "moment": "2.24.0",
+    "moment-timezone": "0.5.26",
+    "mustache": "3.0.1",
+    "pg-promise": "9.0.0",
+    "request": "2.88.0",
+    "request-promise": "4.2.4",
+    "showdown": "1.9.0",
     "stack-trace": "0.0.10",
-    "unescape": "^1.0.1",
-    "uuid": "^3.3.2"
+    "unescape": "1.0.1",
+    "uuid": "3.3.2"
   },
   "devDependencies": {
-    "@types/boom": "^7.2.1",
-    "@types/bunyan": "^1.8.6",
-    "@types/chai": "^4.1.7",
-    "@types/cheerio": "^0.22.11",
+    "@types/boom": "7.3.0",
+    "@types/bunyan": "1.8.6",
+    "@types/chai": "4.1.7",
+    "@types/cheerio": "0.22.12",
     "@types/co-body": "0.0.3",
-    "@types/joi": "^14.3.3",
-    "@types/koa": "^2.0.48",
-    "@types/koa-basic-auth": "^2.0.3",
-    "@types/koa-qs": "^2.0.0",
-    "@types/koa-router": "^7.0.40",
-    "@types/lodash": "^4.14.134",
-    "@types/mocha": "^5.2.7",
-    "@types/moment-timezone": "^0.5.12",
-    "@types/mustache": "^0.8.32",
-    "@types/node": "^12.0.8",
-    "@types/pg": "^7.4.14",
-    "@types/request": "^2.48.1",
-    "@types/request-promise": "^4.1.44",
-    "@types/showdown": "^1.9.3",
+    "@types/joi": "14.3.3",
+    "@types/koa": "2.0.49",
+    "@types/koa-basic-auth": "2.0.3",
+    "@types/koa-qs": "2.0.0",
+    "@types/koa-router": "7.0.42",
+    "@types/lodash": "4.14.136",
+    "@types/mocha": "5.2.7",
+    "@types/moment-timezone": "0.5.12",
+    "@types/mustache": "0.8.32",
+    "@types/node": "12.7.0",
+    "@types/pg": "7.4.14",
+    "@types/request": "2.48.2",
+    "@types/request-promise": "4.1.44",
+    "@types/showdown": "1.9.3",
     "@types/stack-trace": "0.0.29",
-    "@types/uuid": "^3.4.4",
-    "chai": "^4.2.0",
-    "cheerio": "^1.0.0-rc.3",
-    "mocha": "^6.1.4",
-    "prettier": "^1.18.2",
-    "ts-node-dev": "^1.0.0-pre.40",
-    "tslint": "^5.17.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-no-unused-expression-chai": "^0.1.4",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.5.2"
+    "@types/uuid": "3.4.5",
+    "chai": "4.2.0",
+    "cheerio": "1.0.0-rc.3",
+    "mocha": "6.2.0",
+    "prettier": "1.18.2",
+    "ts-node-dev": "1.0.0-pre.40",
+    "tslint": "5.18.0",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-no-unused-expression-chai": "0.1.4",
+    "tslint-plugin-prettier": "2.0.1",
+    "typescript": "3.5.3"
   }
 }
