--- a/package.json
+++ b/package.json
@@ -152,11 +152,11 @@
     "url": "git+https://github.com/TaitoUnited/full-stack-template.git"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.0.0",
-    "@commitlint/config-conventional": "^8.0.0",
-    "git-branch-is": "^2.1.0",
-    "husky": "^2.5.0",
+    "@commitlint/cli": "8.1.0",
+    "@commitlint/config-conventional": "8.1.0",
+    "git-branch-is": "2.1.0",
+    "husky": "3.0.2",
     "npm-run-all": "~4.1.5",
-    "semantic-release": "^15.13.18"
+    "semantic-release": "15.13.19"
   }
 }
