--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "npm run start:dev",
     "start:dev": "NODE_ENV=development ts-node-dev --respawn --transpileOnly $([ $HOST_UNAME = Darwin ] && [ ! $DC_COMMAND ] && echo --poll) index.ts | bunyan -l debug",
     "lint": "tslint -p . -c tslint.json",
+    "lint": "tsc -p . --noEmit && tslint -p . -c tslint.json",
     "build:test": "tsc --build tsconfig.test.json",
     "build:prod": "NODE_ENV=production tsc --build tsconfig.json",
     "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js"
