--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,6 @@
     "test": "mocha -r ts-node/register --timeout 2000 --recursive \"**/${test_name:-*}.test.ts\"",
     "start": "npm run start:dev",
     "start:dev": "NODE_ENV=development ts-node-dev --respawn $([ $HOST_UNAME = Darwin ] && [ ! $DC_COMMAND ] && echo --poll) index.ts | bunyan -l debug",
-    "lint": "tslint -p . -c tslint.json",
     "lint": "tsc -p . --noEmit && tslint -p . -c tslint.json",
     "build:test": "tsc --build tsconfig.test.json",
     "build:prod": "NODE_ENV=production tsc --build tsconfig.json",
@@ -14,6 +13,7 @@
   },
   "dependencies": {
     "@sentry/node": "5.6.0",
+    "aws-sdk": "2.508.0",
     "boom": "7.3.0",
     "bunyan": "1.8.12",
     "koa": "2.7.0",
