--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,8 @@
   "name": "full-stack-template-server",
   "private": true,
   "scripts": {
-    "unit": "sh -c 'test_name=$(printf '%s' \"$0\" | sed -e 's/^sh$//g') && mocha -r ts-node/register --recursive \"**/${test_name:-*}.unit.ts\"'",
-    "test": "mocha -r ts-node/register --timeout 2000 --recursive \"**/${test_name:-*}.test.ts\"",
+    "unit": "jest src/",
+    "test": "jest test/",
     "start": "npm run start:dev",
     "start:dev": "NODE_ENV=development ts-node-dev --respawn $([ $HOST_UNAME = Darwin ] && [ ! $DC_COMMAND ] && echo --poll) index.ts | bunyan -l debug",
     "lint": "tsc -p . --noEmit && eslint ./src/**/*.ts --ignore-path .eslintignore --quiet",
@@ -35,16 +35,15 @@
   "devDependencies": {
     "@types/boom": "7.3.0",
     "@types/bunyan": "1.8.6",
-    "@types/chai": "4.1.7",
     "@types/cheerio": "0.22.12",
     "@types/co-body": "0.0.3",
+    "@types/jest": "24.0.17",
     "@types/joi": "14.3.3",
     "@types/koa": "2.0.49",
     "@types/koa-basic-auth": "2.0.3",
     "@types/koa-qs": "2.0.0",
     "@types/koa-router": "7.0.42",
     "@types/lodash": "4.14.136",
-    "@types/mocha": "5.2.7",
     "@types/moment-timezone": "0.5.12",
     "@types/mustache": "0.8.32",
     "@types/node": "12.7.0",
@@ -54,11 +53,9 @@
     "@types/showdown": "1.9.3",
     "@types/stack-trace": "0.0.29",
     "@types/uuid": "3.4.5",
-    "chai": "4.2.0",
-    "cheerio": "1.0.0-rc.3",
-    "mocha": "6.2.0",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
+    "cheerio": "1.0.0-rc.3",
     "eslint": "6.1.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-config-standard": "13.0.1",
@@ -67,7 +64,9 @@
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.0",
+    "jest": "24.8.0",
     "prettier": "1.18.2",
+    "ts-jest": "24.0.2",
     "ts-node-dev": "1.0.0-pre.40",
     "typescript": "3.5.3"
   }
